Fix text not visible in dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ article#main-art{
 
 .timeline-content {
     padding: 15px;
-    background-color: #fff;
+    /* background-color: #fff; */
     border-radius: 5px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.1);
     position: relative;
